zero-cost-templating/tests/ui/compile_fail/mismatched_types_unit.stderr
error[E0308]: mismatched types
  --> tests/ui/compile_fail/mismatched_types_unit.rs:20:5
   |
12 | pub gen fn test() -> Cow<'static, str> {
   |                            ----------------- expected `()` because of return type
...
20 |     yields!(template.test_template4())
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `()`, found `Template<TestTemplate5, (), ()>`
   |
   = note: expected unit type `()`
                 found struct `Template<TestTemplate5, (), ()>`
   = note: this error originates in the macro `yields` (in Nightly builds, run with -Z macro-backtrace for more info)
